--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="faq-header">
-  <h2>Frequently Asked Questions (FAQ)</h2>
+  <h2>Frequently Asked Questions</h2>
 </div>
 
 <div class="faq-intro">
@@ -59,8 +59,8 @@
 </div>
 
 <style>
-  .faq-header {
-    background-image: url('democracy.png');
+.faq-header {
+    background-image: url("static/democracy.png");
     background-size: cover;
     background-position: center;
     padding: 100px 0;
@@ -69,65 +69,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
   }
-
-  .faq-intro {
-    max-width: 800px;
-    margin: 30px auto;
-    text-align: center;
-  }
-
-  .faq-intro p {
-    font-size: 18px;
-    line-height: 1.6;
-    color: #333;
-  }
-  .faq-header h2 {
-    color: rgb(255, 255, 255);
-    font-size: 50px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
-
-  .question-wrapper {
-    margin-bottom: 20px;
-    padding: 20px;
-    border: 2px solid #ccc;
-    border-radius: 10px;
-  }
-
-  .answer {
-    display: none;
-    margin-top: 10px;
-    padding: 10px;
-    background-color: #f9f9f9;
-  }
-  .contact-section {
-    max-width: 800px;
-    margin: 50px auto;
-    text-align: center;
-  }
-
-  .contact-section h3 {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-
-  .contact-section p {
-    font-size: 18px;
-    line-height: 1.6;
-    color: #333;
-  }
-
-  .contact-section a {
-    color: #007bff;
-    text-decoration: none;
-  }
-
-  .contact-section a:hover {
-    text-decoration: underline;
-  }
-
 </style>
 
 <script>
